2004-05-29  Per Bothner  <per@bothner.com>

	* TreeList.java (nextDataIndex):  Fix thinko.

2004-05-20  Per Bothner  <per@bothner.com>

	* TreeList.java (PROCESSING_INSTRUCTION):  Make protected.

	* Sequence.java (CDATA_VALUE):  New constant.
	* TreeList.java (getNextKind):  Return CDATA_VALUE if CDATA_SECTION.

	* AbstractSequence.java (getIteratorAtPos):  Add a copyPos.
	* TreeList.java (consumeIRange):  Use getIteratorAtPos.
	(toString):  Likewise.

	* TreeList.java (toString):  Print separator.

2004-05-18  Per Bothner  <per@bothner.com>

	* TreeList.java (statistics):  New methods.

2004-05-05  Per Bothner  <per@bothner.com>

	* XConsumer.java (writeCDATA):  New method.
	* TreeList.java (CDATA_SECTION):  New constant.
	(writeCData):  New method.
	(consumeIRange, toString, getNextKind, stringValue, nextNodeIndex,
	nextMatching, nextDataIndex, dump):  Handle CDATA_SECTION.

2004-05-04  Per Bothner  <per@bothner.com>

	* SimpleVector.java (compareToInt, compareToLong):  New helper methods.
	* F32Vector.java:  Implement Comparable, if JAVA2..
	(compareTo):  New method.
	* F64Vector.java:  Likewise.
	* FVector.java:  Likewise.
	* U64Vector.java:  Likewise.
	* S8Vector.java:  Likewise - using compareToInt.
	* S16Vector.java:  Likewise.
	* S32Vector.java:  Likewise.
	* U8Vector.java:  Likewise.
	* U16Vector.java:  Likewise.
	* S64Vector.java:  Likewise - using compareToLong.
	* U32Vector.java:  Likewise.
	
	* LList.java:  Implement Comparable, if JAVA2.
	(compareTo):  New method.
	* Pair.java (compareTo):  Two new methods.

2004-04-22  Per Bothner  <per@bothner.com>

	* FString.java:  Implement Comparable, if JAVA2.
	(compareTo):  New method.

2004-04-18  Per Bothner  <per@bothner.com>

	* XConsumer.java (XConsumer):  New interface, extends Consumer.
	* Makefile.am:  Update accordingly.
	* Sequence.java (COMMENT_VALUE, PROCESSING_INSTRUCTION_VALUE):  New
	constants.
	* TreeList.java:  Implement XConsumer.
	(COMMENT, PROCESSING_INSTRUCTION):  New contants.