@@ -1,3 +1,8 @@
+2004-07-20  Per Bothner  <per@bothner.com>
+
+	* LList.java:  Remove useless import statements.
+	* Sequence.java:  Likewise.
+
 2004-05-29  Per Bothner  <per@bothner.com>
 
 	* TreeList.java (nextDataIndex):  Fix thinko.
